[package]
name = "server"
version = "0.1.0"
authors = ["Noituri"]
edition = "2018"

[dependencies]
serde_derive = "1.0.89"
serde = "1.0.89"
base64 = "0.10.1"
config = "0.9.2"
lazy_static = "1.3.0"
jsonwebtoken = "6.0.1"
chrono = "0.4.6"
lettre = "0.9"
lettre_email = "0.9"
sha3 = "0.8.1"
redis = "0.10.0"
uuid = "0.7.4"
actix-files = "0.1.0-beta.4"
actix-web = "1.0.0-rc"
serde_json = "1.0.39"
env_logger = "0.6.1"
actix-service = "0.4.0"
futures = "0.1.27"